
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char UCHAR ;
typedef int BOOL ;


 char* ALNUM_CHARSET ;
 scalar_t__ strstr (char*,char*) ;

BOOL is_alnum(UCHAR c)
{
    char *alnum = ALNUM_CHARSET;
    char search_c[2] = "";
    search_c[0] = c;
    return((BOOL)strstr(alnum, search_c));
}
