; ModuleID = '/home/carl/AnghaBench/exploitdb/shellcodes/generator/extr_13286.c_is_alnum.c'
source_filename = "/home/carl/AnghaBench/exploitdb/shellcodes/generator/extr_13286.c_is_alnum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ALNUM_CHARSET = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_alnum(i8 signext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i8*, align 8
  %4 = alloca [2 x i8], align 1
  store i8 %0, i8* %2, align 1
  %5 = load i8*, i8** @ALNUM_CHARSET, align 8
  store i8* %5, i8** %3, align 8
  %6 = bitcast [2 x i8]* %4 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 1 %6, i8 0, i64 2, i1 false)
  %7 = load i8, i8* %2, align 1
  %8 = getelementptr inbounds [2 x i8], [2 x i8]* %4, i64 0, i64 0
  store i8 %7, i8* %8, align 1
  %9 = load i8*, i8** %3, align 8
  %10 = getelementptr inbounds [2 x i8], [2 x i8]* %4, i64 0, i64 0
  %11 = call i64 @strstr(i8* %9, i8* %10)
  %12 = trunc i64 %11 to i32
  ret i32 %12
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i64 @strstr(i8*, i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
